add week 12
